# My_project_work_ws

./: README.md  bev_params.npz
notebooks/Pyython_Reviewing/: Python_Reviewing.ipynb
notebooks/RL_hugging_face/bonus_unit1/: bonus_unit1.ipynb
src/camera_lane_segmentation/: CMakeLists.txt
src/camera_lane_segmentation/scripts/: Ekfsmooth_pure_pursuit_onoff.py  bev_line_thinning_node.py  bev_with_filtering.py  bev_with_superior_filtering.py  bev_with_superior_filtering_withoutdelay.py  binary_mask_with_thinning.py  filtering_with_thinning.py  kfsmooth_pure_pursuit.py  kfsmooth_pure_pursuit_onoff.py  lane_detection.py  lane_judge.py  lane_judge_path.py  lane_line_mask_checking.py  lane_mask_with_path.py  ll_and_da.py  pseudo_lidar.py  pseudo_lidar_IPM_bev.py  tempCodeRunnerFile.py  thinning_result_checking.py
src/camera_lane_segmentation/scripts/utils/: bev_utils.py  check_opencv.py  gpu_ckeck.py  midas_depth.py  util.py  (+3 more)
src/judgement/: CMakeLists.txt  package.xml
src/judgement/scripts/: judgement.py  unified_path_publisher.py
src/python_practice/scripts/: python review2.py
src/tunnel_path/: CMakeLists.txt  package.xml
src/tunnel_path/launch/: tunnel_path_node.launch
src/tunnel_path/scripts/: tunnel_path_follower.py
src/wall_detection/: CMakeLists.txt  package.xml
src/wall_detection/src/: two_walls_detection_node.cpp
src/yolopv2_ros/: CMakeLists.txt  package.xml
src/yolopv2_ros/scripts/: bev_with_filtering.py  driving_area.py  lane_segmentation.py  lane_segmentation_optimize.py  lane_segmentation_without_binary_mask.py  without_thinning.py
(+2 files in other folders)
